# openai_demo

./: .env.example  .gitignore  README.md  code_style.sh  gemma.sh  pyproject.toml
src/openai_demo/: __init__.py  common.py  tools.py
