[project]
name = "openai-demo"
version = "0.1.0"
description = "CLI demo interface for the OpenAI API"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "yinchichan@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.33.0",
    "rich>=15.0.0",
]

[project.scripts]
demo = "openai_demo:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]
